# openshell

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md
openshell/: CMakeLists.txt  analyzer.h  main.cpp  openshell.h  prompt_rec.h
openshell/opensh_headers/: all_commands.h  is64bit.h  programs_include.h  prompt_rec.h
